objects/ProgramCategoryDisqualification__c.object
<CustomObject>
    <fields>
        <fullName>DisqualificationEndDate__c</fullName>
        <description>End date of the Program Category Disqualification</description>
        <label>Disqualification End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DisqualificationReason__c</fullName>
        <label>Disqualification Reason</label>
        <referenceTo>DisqualificationReason__c</referenceTo>
        <relationshipLabel>Program Category Disqualifications</relationshipLabel>
        <relationshipName>ProgramCategoryDisqualifications</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DisqualificationStartDate__c</fullName>
        <description>The date of Disqualification</description>
        <inlineHelpText>The date of Disqualification</inlineHelpText>
        <label>Disqualification Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PCDCountFormula__c</fullName>
        <formula>ProgramCategoryQualification__r.ProgramCategoryDisqualifications__c</formula>
        <label>PCD Count Formula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProgramCategoryQualification__c</fullName>
        <label>Program Category Qualification</label>
        <referenceTo>ProgramCategoryQualification__c</referenceTo>
        <relationshipLabel>Program Category Disqualifications</relationshipLabel>
        <relationshipName>ProgramCategoryDisqualifications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ProgramCategoyDisqualificationEID__c</fullName>
        <externalId>true</externalId>
        <label>Program Category Disqualification EID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <label>Program Category Disqualification</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Program Category Disqualification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Category Disqualifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>DisqualificationStartEnddate</fullName>
        <active>true</active>
        <errorConditionFormula>DisqualificationStartDate__c &gt;  DisqualificationEndDate__c</errorConditionFormula>
        <errorMessage>End date should be greater than Start Date</errorMessage>
    </validationRules>
</CustomObject>